server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert --volumes hostPath
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: server
  name: server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: server
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert --volumes hostPath
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.service: server
    spec:
      containers:
        - env:
            - name: DB_HOST
              value: 10.100.140.196
            - name: DB_NAME
              value: postgres
            - name: DB_PASSWORD
              value: postgres
            - name: DB_USER
              value: postgres
          image: anzurakizz/food-wiz-kiii-backend
          name: server
          ports:
            - containerPort: 5000
          resources: {}
          volumeMounts:
            - mountPath: /usr/src/app/app
              name: flask
            - mountPath: /usr/src/app/migrations
              name: flask
      restartPolicy: Always
      volumes:
        # - hostPath:
        #     path: D:\GitHub\food-wiz-kiii\app
        #   name: server-hostpath0
        # - hostPath:
        #     path: D:\GitHub\food-wiz-kiii\migrations
        #   name: server-hostpath1
        - name: flask
          persistentVolumeClaim:
            claimName: flask-claim
status: {}
